# diona-ds-project

./: .gitignore  AI_USAGE.md  PRESENTATION.md  PROPOSAL.md  README.md  REPORT.md  environment.yml  main.py  pyproject.toml  requirements-pin.txt  requirements.txt  run.py  setup.sh  verify_versions.py
notebooks/: forecast_workflow.ipynb  model_tests.ipynb
report/: final_report.tex  project_report_template.tex  references.bib
results/: eda_statistics_TSLA_20260105T173141Z.txt  model_comparison_TSLA_10_days_20251212T191256Z.csv  model_comparison_TSLA_10_days_20251219T015103Z.csv  model_comparison_TSLA_10_days_20251220T124156Z.csv  model_comparison_TSLA_10_days_20251221T183412Z.csv  model_comparison_TSLA_10_days_20251222T180020Z.csv  model_comparison_TSLA_1_month_20251215T105147Z.csv  model_comparison_TSLA_1_month_20251219T015104Z.csv  model_comparison_TSLA_1_month_20251220T124200Z.csv  model_comparison_TSLA_1_month_20251221T183413Z.csv  model_comparison_TSLA_1_month_20251222T212311Z.csv  model_comparison_TSLA_1_year_20251220T124208Z.csv  model_comparison_TSLA_1_year_20251222T212313Z.csv  model_comparison_TSLA_3_months_20251214T013507Z.csv  model_comparison_TSLA_3_months_20251219T015105Z.csv  model_comparison_TSLA_3_months_20251221T174813Z.csv  model_comparison_TSLA_3_months_20251221T183414Z.csv  model_comparison_TSLA_3_months_20251222T180021Z.csv  model_comparison_TSLA_6_months_20251214T013509Z.csv  model_comparison_TSLA_6_months_20251219T015106Z.csv  model_comparison_TSLA_6_months_20251221T174813Z.csv  model_comparison_TSLA_6_months_20251221T183415Z.csv  (+11 more)
src/: eda.py  (+15 more)
(+17 files in other folders)
